@@ -1,4 +1,7 @@
 
+2001-07-11:
+  * Added ST Medium resolution.
+
 2001-07-10:
   * Added Sven's debugger patch.
 
